# fira_minimal_node

./: CMakeLists.txt  README.md  package.xml
config/: adap2e.yaml
include/fira_minimal_node/: base_parameters.hpp  command_factory.hpp  command_parameters.hpp  minimal_path_following_node.hpp
launch/: path_following.launch.py
src/: minimal_path_following_node.cpp
